# quark

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CLAUDE.md  README.md  checkpoint_utils.py  pyproject.toml  torch_utils.py  train.py  utils.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: lint.yml  tests.yml
cluster/: deltanet.sub  reproduce_flame.sub  train.sh  train.sub  transformer.sub
configs/: config.yaml
configs/checkpoint/: default.yaml
configs/data/: fineweb10B.yaml
configs/logging/: default.yaml
configs/model/: delta_net.yaml  transformer.yaml
configs/system/: default.yaml
configs/training/: default.yaml
data/: __init__.py  dataloaders.py  datasamplers.py
data/datasets/: __init__.py  data_prep_utils.py  prepare.py  prepare_fineweb_10BT.sh
engine/: __init__.py  engine.py
eval/: evaluate.py  harness.py
models/: __init__.py  delta_net.py  transformer.py  utils.py
optim/: __init__.py  init_optim.py  lr_schedule.py  sign_sgd.py
tests/: __init__.py  conftest.py  test_checkpoint.py  test_config.py  test_engine.py  test_model.py  test_optim.py  test_utils.py
